# XMLparser

./: .gitignore  CMakeLists.txt  ReadMe.md
include/: XMLParser.h
resource/: AirCrafts.xml  AirCrafts_ret.xml
src/: XMLParser.cpp  XMLParser.h
test/: main.cpp
